--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
             <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
                 <p>
-                  <a href="file:///C:/My%20Portfolio/personal-portfolio-main/images/skills/Anuj%20Vats%20Resume.pdf" class="btn btn-primary py-3 px-3">Download CV</a>
+                  <a href="images/skills/Anuj%20Vats%20Resume.pdf" download class="btn btn-primary py-3 px-3">Download CV</a>
+
                 </p>
               </div>
             </div>
