Fix: updated image path for About section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             <div class="img-about img d-flex align-items-stretch">
               <div class="overlay"></div>
               <div class="img d-flex align-self-stretch align-items-center">
-                 <img src="file:///C:/My%20Portfolio/personal-portfolio-main/images/skills/IMG_2671.JPG" alt="My Photo" class="img-fluid" />
+                 <img src="images/skills/IMG_2671.JPG" alt="My Photo" class="img-fluid" />
+
               </div>
             </div>
           </div>
